--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AARVA</title>
-    <link rel="shortcut icon" type="image/png" href="image/Logo.png">
+    <link rel="shortcut icon" type="image/png" href="Logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
@@ -53,8 +53,8 @@
             </div>
         <div class="container">
                 <div class="hero">
-                    <div class="imillustration-1">
-                        <img src="image/illustration-1.jpeg" alt="Illustration" class="hero-image">
+                    <div class="illustration-1">
+                        <img src="illustration-1.jpeg" alt="Illustration" class="hero-image">
                     </div>
                     <div class="content">
                         <h1>A Premium Web Development Company in India</h1>
@@ -78,12 +78,12 @@
                         </p>
                     </div>
                     <div class="illustration-2">
-                        <img src="image/illustration-2.jpg" alt="Illustration" class="hero-image">
+                        <img src="illustration-2.jpg" alt="Illustration" class="hero-image">
                     </div>
                 </div>
                 <div class="hero">
                     <div class="illustration-3">
-                        <img src="image/illustration-3.jpg" alt="Illustration" class="hero-image">
+                        <img src="illustration-3.jpg" alt="Illustration" class="hero-image">
                     </div>
                     <div class="content">
                         <h1>A Trusted Partner in Delivering Exceptional </h1>
@@ -101,7 +101,7 @@
             <div id="topic"><h2>What we do</h2></div>
             <div class="subdiv">
                 <div class="work-box">
-                <img src="image/interface.png" alt="Image 1">
+                <img src="interface.png" alt="Image 1">
                 <p >Interface</p>
                  </div>
                 <div class="overlay"><p>A well-designed interface is crucial for 
@@ -110,7 +110,7 @@
             </div>
             <div class="subdiv">
                 <div class="work-box">
-                <img src="image/ecammerce.png" alt="Image 2">
+                <img src="ecammerce.png" alt="Image 2">
                 <p>Ecommerce</p>
                 </div>
                 <div class="overlay"><p>E-commerce increases sales and revenue
@@ -119,7 +119,7 @@
             </div>
             <div class="subdiv">
                 <div class="work-box">
-                <img src="image/billing.png" alt="Image 3">
+                <img src="billing.png" alt="Image 3">
                 <p>Billing</p>
                 </div>
                 <div class="overlay"><p>A customized billing software enables firms to 
@@ -128,7 +128,7 @@
             </div>
             <div class="subdiv">
                 <div class="work-box">
-                <img src="image/maintanence.png" alt="Image 4">
+                <img src="maintanence.png" alt="Image 4">
                 <p>maintanence</p>
                 </div>
                 <div class="overlay"><p>Software maintenance involves updating, modifying, and 
