--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="image/Logo.png">
+    <link rel="shortcut icon" type="image/png" href="Logo.png">
     <title>About Us</title>
     <style>
         body{
@@ -136,7 +136,7 @@
     </div>
     <div class="subdiv27">
             <div class="imgdiv">
-                <img src="image/office.jfif" alt="office image">
+                <img src="office.jfif" alt="office image">
             </div>
             <div class="text3">
                 <div class="info2">
