--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         header{
             width: 100%;
             height: 70px;
-            background-color: #007BFF;
+            background-color: #075cb6;
             font-size: 3em;
             display: flex;
             position: fixed;
