--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </svg>
                     </label>
                 <a id="scroll-to-register"> Register</a>
-                <a id="scroll-to-domine">Domines</a>
+                <a id="scroll-to-domine">Domaines</a>
                 <a id="scroll-to-contact">Contact Us</a>
                 <a href="about.html">About Us</a>
             </div>
