--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </svg>
                     </label>
                 <a id="scroll-to-register"> Register</a>
-                <a id="scroll-to-domine">Domaines</a>
+                <a id="scroll-to-domine">Domains</a>
                 <a id="scroll-to-contact">Contact Us</a>
                 <a href="about.html">About Us</a>
             </div>
@@ -201,7 +201,7 @@
             <div class="follow">
                 <p>Follow us on:</p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/aarva-technologies-b5b47833b/" target="_blank" class="fa-brands fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" class="fa-brands fa-linkedin"></a>
                     <a href="https://x.com/aarvatech?t=HwT1CtYzxxSGur1tn9xXfQ&s=09" target="_blank" class="fa-brands fa-x-twitter"></a>
                     <a href="https://www.instagram.com/aarva_technologies/?igsh=MTl2dXdpdTlnYXZvdw%3D%3D"
                         target="_blank" class="fa-brands fa-instagram"></a>
