--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="follow">
                 <p>Follow us on:</p>
                 <div class="social-links">
-                    <a href="www.linkedin.com/in/aarva-technologies-4b3b20342/" target="_blank" class="fa-brands fa-linkedin"></a>
+                    <a href="https://www.linkedin.com/in/aarva-technologies-4b3b20342/" target="_blank" class="fa-brands fa-linkedin"></a>
                     <a href="https://x.com/aarvatech?t=HwT1CtYzxxSGur1tn9xXfQ&s=09" target="_blank" class="fa-brands fa-x-twitter"></a>
                     <a href="https://www.instagram.com/aarva_technologies/?igsh=MTl2dXdpdTlnYXZvdw%3D%3D"
                         target="_blank" class="fa-brands fa-instagram"></a>
